prevent ad overlap on mobile view

--- a/stylus/sidebar.styl
+++ b/stylus/sidebar.styl
@@ -9,7 +9,7 @@
 
   @media PHONE
     float: none
-    margin-top: 0
+    margin-top: 20px !important
     padding: 20px
     text-align: center
     width: 100%
